--- a/frontend/app/src/main/res/layout/fragment_booking_detail.xml
+++ b/frontend/app/src/main/res/layout/fragment_booking_detail.xml
@@ -37,14 +37,8 @@
                 android:layout_height="wrap_content"
                 android:padding="1dp"
                 android:textColor="@color/black"
-                android:textSize="18sp"
+                android:textSize="30sp"
                 android:textStyle="bold" />
-            <TextView
-                android:id="@+id/txtDesc"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="1dp"
-                android:textColor="@color/black" />
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -72,6 +66,72 @@
                     android:textSize="18dp"
                     android:textStyle="bold" />
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/labelDesc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="1dp"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                android:text="Description:"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/txtDesc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="1dp"
+                android:textColor="@color/black" />
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="2px"
+                android:background="@color/gray" />
+
+            <TextView
+                android:id="@+id/labelStartDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="1dp"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                android:text="Start date:"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/txtStartDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="1dp"
+                android:textColor="@color/black" />
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="2px"
+                android:background="@color/gray" />
+
+            <TextView
+                android:id="@+id/labelReturnDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="1dp"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                android:text="Return date:"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/txtReturnDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="1dp"
+                android:textColor="@color/black" />
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="2px"
+                android:background="@color/gray" />
 
             <Button
                 android:id="@+id/btnCancelBooking"
