--- a/frontend/app/src/main/res/layout/fragment_item_detail.xml
+++ b/frontend/app/src/main/res/layout/fragment_item_detail.xml
@@ -301,6 +301,23 @@
             app:layout_constraintTop_toBottomOf="@+id/map" />
 
         <Button
+            android:id="@+id/btnAddToWishlist"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_horizontal_margin_wide"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin_wide"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin_wide"
+            android:layout_marginRight="@dimen/activity_horizontal_margin_wide"
+            android:text="@string/addToWishlist"
+            android:theme="@style/AppTheme.Button"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/map" />
+
+        <Button
             android:id="@+id/btnBook"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -316,7 +333,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/map" />
+            app:layout_constraintTop_toBottomOf="@+id/btnAddToWishlist" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
