--- a/frontend/app/src/main/res/layout/home_items_content.xml
+++ b/frontend/app/src/main/res/layout/home_items_content.xml
@@ -46,14 +46,35 @@
                     android:layout_height="wrap_content"
                     android:padding="1dp"
                     android:textColor="@color/black" />
-                <TextView
-                    android:id="@+id/txtPrice"
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="1dp"
-                    android:textSize="30dp"
-                    android:textStyle="bold"
-                    android:textColor="@color/colorAccentDark" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/txtPrice"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="1dp"
+                        android:layout_weight="1"
+                        android:textSize="30dp"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorAccentDark" />
+
+                    <Switch
+                        android:id="@+id/switchWishlist"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:paddingTop="6dp"
+                        android:text="Wishlist"
+                        android:textSize="24dp"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorAccent"/>
+
+                </LinearLayout>
+
+
             </LinearLayout>
 
         </LinearLayout>
