--- a/frontend/app/src/main/res/layout/activity_user.xml
+++ b/frontend/app/src/main/res/layout/activity_user.xml
@@ -61,6 +61,7 @@
                 android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 app:errorEnabled="true"
+                android:hint="@string/username"
                 app:hintTextAppearance="@style/AppTheme.HintText"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -123,6 +124,7 @@
                 android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 app:errorEnabled="true"
+                android:hint="@string/address"
                 app:hintTextAppearance="@style/AppTheme.HintText"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
