--- a/frontend/app/src/main/res/layout/fragment_booking_detail.xml
+++ b/frontend/app/src/main/res/layout/fragment_booking_detail.xml
@@ -68,6 +68,56 @@
                     android:textStyle="bold" />
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="1dp"
+                    android:textSize="22sp"
+                    android:textStyle="bold"
+                    android:text="Owner:"
+                    android:textColor="@color/black" />
+
+                <TextView
+                    android:id="@+id/txtOwnerEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="1dp"
+                    android:textSize="22sp"
+                    android:gravity="end"
+                    android:textColor="@color/black" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="1dp"
+                    android:textSize="22sp"
+                    android:textStyle="bold"
+                    android:text="Borrower:"
+                    android:textColor="@color/black" />
+
+                <TextView
+                    android:id="@+id/txtBorrowerEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="1dp"
+                    android:textSize="22sp"
+                    android:gravity="end"
+                    android:textColor="@color/black" />
+
+            </LinearLayout>
+
             <TextView
                 android:id="@+id/labelDesc"
                 android:layout_width="match_parent"
@@ -87,42 +137,60 @@
                 android:textColor="@color/black" />
 
 
-            <TextView
-                android:id="@+id/labelStartDate"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:padding="1dp"
-                android:textSize="22sp"
-                android:textStyle="bold"
-                android:text="Start date:"
-                android:textColor="@color/black" />
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/txtStartDate"
-                android:layout_width="match_parent"
-                android:layout_height="39dp"
-                android:padding="1dp"
-                android:textSize="18dp"
-                android:textColor="@color/black" />
+                <TextView
+                    android:id="@+id/labelStartDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="1dp"
+                    android:textSize="22sp"
+                    android:layout_marginTop="8dp"
+                    android:textStyle="bold"
+                    android:text="Start date:"
+                    android:textColor="@color/black" />
+
+                <TextView
+                    android:id="@+id/txtStartDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:padding="1dp"
+                    android:textSize="22sp"
+                    android:gravity="end"
+                    android:textColor="@color/black" />
+
+            </LinearLayout>
 
 
-            <TextView
-                android:id="@+id/labelReturnDate"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:padding="1dp"
-                android:textSize="22sp"
-                android:textStyle="bold"
-                android:text="Return date:"
-                android:textColor="@color/black" />
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/txtReturnDate"
-                android:layout_width="match_parent"
-                android:layout_height="36dp"
-                android:textSize="18dp"
-                android:padding="1dp"
-                android:textColor="@color/black" />
+                <TextView
+                    android:id="@+id/labelReturnDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="1dp"
+                    android:textSize="22sp"
+                    android:textStyle="bold"
+                    android:text="Return date:"
+                    android:textColor="@color/black" />
+
+                <TextView
+                    android:id="@+id/txtReturnDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="22sp"
+                    android:padding="1dp"
+                    android:gravity="end"
+                    android:textColor="@color/black" />
+
+            </LinearLayout>
 
             <FrameLayout
                 android:id="@+id/fragmentDisplayInBookingDetail"
